@@ -1,47 +1,34 @@
 <?php
 
-########################################################################
-# Extension Manager/Repository config file for ext: "ratings"
-#
-# Auto generated 21-04-2009 10:12
-#
-# Manual updates:
-# Only the data in the array - anything else is removed by next write.
-# "version" and "dependencies" must not be touched!
-########################################################################
+/***************************************************************
+ * Extension Manager/Repository config file for ext "ratings".
+ ***************************************************************/
 
-$EM_CONF[$_EXTKEY] = array(
+$EM_CONF[$_EXTKEY] = array (
 	'title' => 'Ratings',
-	'description' => 'Modern AJAX-based ratings system. Public free support is provided only through TYPO3 mailing lists! Contact by e-mail for commercial support.',
+	'description' => 'Modern AJAX-based ratings system. Public free support is provided only through typo3.slack.com! Contact by e-mail for commercial support.',
 	'category' => 'plugin',
-	'author' => 'Netcreators BV',
-	'author_email' => 'extensions@netcreators.com',
-	'shy' => '',
-	'dependencies' => '',
-	'conflicts' => '',
-	'priority' => '',
-	'module' => '',
+	'version' => '2.0.3',
 	'state' => 'beta',
-	'internal' => '',
 	'uploadfolder' => 0,
 	'createDirs' => '',
-	'modify_tables' => '1',
-	'clearCacheOnLoad' => 0,
-	'lockType' => '',
+	'clearcacheonload' => 0,
+	'author' => 'Netcreators BV',
+	'author_email' => 'extensions@netcreators.com',
 	'author_company' => 'Netcreators BV',
-	'version' => '2.0.3',
-	'constraints' => array(
-		'depends' => array(
+	'constraints' => 
+	array (
+		'depends' => 
+		array (
 			'php' => '5.3.0-5.5.99',
 			'typo3' => '6.0.0-6.2.99',
 		),
-		'conflicts' => array(
+		'conflicts' => 
+		array (
 		),
-		'suggests' => array(
+		'suggests' => 
+		array (
 		),
-	),
-	'suggests' => array(
 	),
 );
 
-?>
